--- a/ShivaHome.html
+++ b/ShivaHome.html
@@ -52,7 +52,7 @@ src="ShivaHome.fld/image002.png" alt="Run with solid fill"><img width=72
 height=72 id="Graphic 6" src="ShivaHome.fld/image003.png"
 alt="Fir tree with solid fill"><img width=72 height=72 id="Graphic 7"
 src="ShivaHome.fld/image004.png" alt="Deciduous tree with solid fill"><img
-width=72 height=72 id="Graphic 8" src="ShivaHome.fld/image005.png"
+width=72 height=72 id="Graphic 8" src="image005.png"
 alt="Forest scene with solid fill"><img width=72 height=72 id="Graphic 9"
 src="ShivaHome.fld/image006.png" alt="Tropical scene with solid fill"></p>
 
