--- a/ShivaHome.html
+++ b/ShivaHome.html
@@ -47,17 +47,29 @@ src="ShivaHome.fld/image001.png" alt="Man with cane with solid fill"></p>
 
 <p class=MsoNormal>&nbsp;</p>
 
-<p class=MsoNormal><img width=72 height=72 id="Graphic 4"
-src="ShivaHome.fld/image002.png" alt="Run with solid fill"><img width=72
-height=72 id="Graphic 6" src="ShivaHome.fld/image003.png"
-alt="Fir tree with solid fill"><img width=72 height=72 id="Graphic 7"
-src="ShivaHome.fld/image004.png" alt="Deciduous tree with solid fill"><img
+<p class=MsoNormal>
+	
+	<img width=72 height=72 id="Graphic 4"
+src="image002.png" alt="Run with solid fill">
+	
+	<img width=72
+height=72 id="Graphic 6" src="image003.png"
+alt="Fir tree with solid fill">
+	
+	<img width=72 height=72 id="Graphic 7"
+src="image004.png" alt="Deciduous tree with solid fill">
+	
+	<img
 width=72 height=72 id="Graphic 8" src="image005.png"
-alt="Forest scene with solid fill"><img width=72 height=72 id="Graphic 9"
-src="ShivaHome.fld/image006.png" alt="Tropical scene with solid fill"></p>
+alt="Forest scene with solid fill">
+	
+	<img width=72 height=72 id="Graphic 9"
+src="image006.png" alt="Tropical scene with solid fill"></p>
 
-<p class=MsoNormal><img width=72 height=72 id="Graphic 10"
-src="ShivaHome.fld/image007.png" alt="Mountains with solid fill"></p>
+<p class=MsoNormal>
+	
+	<img width=72 height=72 id="Graphic 10"
+src="image007.png" alt="Mountains with solid fill"></p>
 
 <p class=MsoNormal>&nbsp;</p>
 
