--- a/ShivaHome.html
+++ b/ShivaHome.html
@@ -41,7 +41,7 @@ here is my first website
 <div class=WordSection1>
 
 <p class=MsoNormal><img width=72 height=72 id="Graphic 2"
-src="ShivaHome.fld/image001.png" alt="Man with cane with solid fill"></p>
+src="image001.png" alt="Man with cane with solid fill"></p>
 
 <p class=MsoNormal>&nbsp;</p>
 
