--- a/ShivaHome.html
+++ b/ShivaHome.html
@@ -36,7 +36,7 @@ div.WordSection1
 
 </head>
 
-<body lang=EN-IN style='word-wrap:break-word' bgcolor='green'>
+<body lang=EN-IN style='word-wrap:break-word;background-color: green;'>
 
 <div class=WordSection1>
 
