--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
   function checkPassword() {
     if (document.getElementById("password").value === "mypassword") {
       localStorage.setItem("authenticated", "true");
-      window.location.href = "index.html";
+      window.location.href = "ShivaHome.html";
     } else {
       alert("Wrong password!");
     }
