--- a/login.html
+++ b/login.html
@@ -1,5 +1,10 @@
+<html>
+<body>
 <input type="password" id="password" placeholder="Enter Password">
 <button onclick="checkPassword()">Login</button>
+  
+</body>
+</html>
 <script>
   function checkPassword() {
     if (document.getElementById("password").value === "mypassword") {
