--- a/ShivaHome.html
+++ b/ShivaHome.html
@@ -1,6 +1,12 @@
 <html>
 
 <head>
+	<script>
+  if (localStorage.getItem("authenticated") !== "true") {
+    window.location.href = "login.html";
+  }
+</script>
+
 <meta http-equiv=Content-Type content="text/html; charset=utf-8">
 <meta name=Generator content="Microsoft Word 15 (filtered)">
 <style>
