--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
   <head>
     <script>
   function checkPassword() {
-    if (document.getElementById("password").value === "mypassword") {
+    if (document.getElementById("password").value === "pass") {
       localStorage.setItem("authenticated", "true");
       window.location.href = "ShivaHome.html";
     } else {
