--- a/login.html
+++ b/login.html
@@ -1,5 +1,7 @@
 <html>
   <head>
+
+
     <script>
   function checkPassword() {
     if (document.getElementById("password").value === "mypassword") { 
@@ -14,7 +16,10 @@
 <body>
 <input type="password" id="password" placeholder="Enter Password">
 <button onclick="checkPassword()">Login</button>
-  
+      <a href="https://github.com/login/oauth/authorize?client_id=Ov23li0DaOizzm7ABxGZ&scope=user">
+  Login with GitHub
+</a>
+    
 </body>
 </html>
 
