--- a/login.html
+++ b/login.html
@@ -14,9 +14,10 @@
 </script>
   </head>
 <body>
-<input type="password" id="password" placeholder="Enter Password">
+<input type="password" id="password" placeholder="Enter Pass">
 <button onclick="checkPassword()">Login</button>
-      <a href="https://github.com/login/oauth/authorize?client_id=Ov23li0DaOizzm7ABxGZ&scope=user">
+  
+<a href="https://github.com/login/oauth/authorize?client_id=Ov23li0DaOizzm7ABxGZ&scope=user">
   Login with GitHub
 </a>
     
