--- a/login.html
+++ b/login.html
@@ -11,6 +11,7 @@
       alert("Wrong password!");
     }
   }
+      var clientId = '3MVG9ZL0ppGP5UrCp.mC5JH9zigF.sw097ZmDYmlP86yqdlRLH._CdXY022Bp0TWUVH6dzO_N0prkKylGfpMl'
 </script>
   </head>
 <body>
@@ -20,6 +21,11 @@
 <a href="https://github.com/login/oauth/authorize?client_id=Ov23li0DaOizzm7ABxGZ&scope=user">
   Login with GitHub
 </a>
+
+  <a href="https://login.salesforce.com/services/oauth2/authorize?client_id=3MVG9ZL0ppGP5UrCp.mC5JH9zigF.sw097ZmDYmlP86yqdlRLH._CdXY022Bp0TWUVH6dzO_N0prkKylGfpMl&scope=user">
+  Login with salesforce
+</a>
+  
     
 </body>
 </html>
