--- a/ShivaHome.html
+++ b/ShivaHome.html
@@ -2,6 +2,24 @@
 
 <head>
 	<script>
+function parseSignedRequest(signedRequest, secret) {
+    const [encodedSig, payload] = signedRequest.split('.');
+    const jsonPayload = atob(payload.replace(/-/g, '+').replace(/_/g, '/'));
+    return JSON.parse(jsonPayload);
+}
+
+// Example usage
+const urlParams = new URLSearchParams(window.location.search);
+const signedRequest = urlParams.get("signed_request");
+alert(signedRequest);
+      
+if (signedRequest) {
+    const secret = "YOUR_SALESFORCE_SECRET"; // Keep this secure
+    const decodedData = parseSignedRequest(signedRequest, secret);
+    console.log("Salesforce User Data:", decodedData);
+}
+
+		
   if (localStorage.getItem("authenticated") !== "true") {
     window.location.href = "login.html";
   }
