--- a/ShivaHome.html
+++ b/ShivaHome.html
@@ -11,7 +11,7 @@ function parseSignedRequest(signedRequest, secret) {
 // Example usage
 const urlParams = new URLSearchParams(window.location.search);
 const signedRequest = urlParams.get("signed_request");
-alert(signedRequest);
+//alert(signedRequest);
       
 if (signedRequest) {
     const secret = "YOUR_SALESFORCE_SECRET"; // Keep this secure
