--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <script>
     const clientId = 'YOUR_CLIENT_ID';
-    const redirectUri = 'https://yourdomain.github.io/callback.html';
+    const redirectUri = 'https://amritaswdeveloper.github.io/Shiva/ShivaHome.html';
 
     function loginWithGitHub() {
       const githubAuthUrl = `https://github.com/login/oauth/authorize?client_id=${clientId}&redirect_uri=${encodeURIComponent(redirectUri)}&scope=user`;
