--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <button onclick="loginWithGitHub()">Login with GitHub</button>
 
   <script>
-    const clientId = 'YOUR_CLIENT_ID';
+    const clientId = 'Ov23liCsrCAQ7SXVMX7k';
     const redirectUri = 'https://amritaswdeveloper.github.io/Shiva/ShivaHome.html';
 
     function loginWithGitHub() {
